Modify with API connectivity, display most stats

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Bazaar</title>
+  <title>Skyblock Stock Brokers Fishing Simulator</title>
 </head>
 
 <body>
